welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: not found: value &&
	case n>89&&n<111 => return true
                 ^nearHundred:4: error: not found: value &&
	case n>189&&n<211 => return true
                  ^