welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
n match{
	case n>89&&n<111 => return true
	case n>189&&n<211 => return true
	case _ => return false
	
}
	
}
